# pocket-seishin

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vercel.json
e2e/: app.spec.ts
legacy/seishin/: __init__.py  db.py  models.py  render.py
legacy/seishin/commands/: creator.py  priority.py
public/: manifest.webmanifest
seishin/: cli.py
seishin/commands/: company.py  cut.py  dashboard.py  episode.py  order.py  project.py  sim.py
src/app/: globals.css  layout.tsx  manifest.ts  sw.ts
src/app/(app)/: layout.tsx
src/app/(app)/cuts/: page.tsx
src/app/(app)/cuts/[cutId]/: page.tsx
src/app/(app)/dashboard/: page.tsx
src/app/(app)/schedule/: page.tsx
src/app/(app)/settings/: page.tsx
src/app/(app)/stopwatch/: page.tsx
src/app/tokushoho/: page.tsx
src/components/: app-shell.tsx  bottom-nav.tsx  cut-card.tsx  date-picker.tsx  deadline-badge.tsx  income-ring.tsx  retake-timeline.tsx  status-update-sheet.tsx  step-indicator.tsx  sync-indicator.tsx  tutorial-overlay.tsx
src/lib/: backup.ts  changelog.ts  crypto.ts  db.ts  demo-data.ts  export-csv.ts  gdrive.ts  notifications.ts  steps.ts
src/lib/hooks/: use-backup.ts  use-cuts.ts  use-deadlines.ts  use-income-history.ts  use-income.ts  use-notifications.ts  use-pwa-install.ts  use-quick-links.ts  use-studios.ts  use-sync.ts  use-theme.ts  use-tutorial.ts
src/types/: animatime.ts  cut.ts  sync.ts
templates/: order.html
