[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seishin"
version = "0.1.0"
description = "アニメ制作進行CLIツール"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.0",
]

[project.scripts]
seishin = "seishin.cli:cli"

[tool.setuptools.packages.find]
include = ["seishin*"]
